--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.button-row button,
+.button-row a {
+  margin-right: 8px;
+}
+
+.container{
+    margin: 5px 15px 0px 15px;
+}
+
+.example-spacer{
+  flex: 1 1 auto;
+}
