--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .example-spacer{
   flex: 1 1 auto;
 }
+
+.buttonHeight{
+  height: 50px;
+}
+
+.body{
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+  background-color: f5f5f5;
+}
