--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,6 +7,10 @@
         </div>
         <br/>
         <div>
+            <button mat-raised-button color="accent" [routerLink]="['/dashboard/video']">Grabar un Video</button>
+        </div>
+        <br/>
+        <div>
             <button mat-raised-button [routerLink]="['/dashboard/gallery']">Ir a Registro</button>
         </div>
     </div>
