-interfaces -icon was changed -spinner-screen -options loaded dynamically fron a json file -moved some file to shared folder

--- a/src/app/components/dashboard/gallery/gallery.component.html
+++ b/src/app/components/dashboard/gallery/gallery.component.html
@@ -1,4 +1,8 @@
 
+<div class="body">
+    <button mat-raised-button color="primary" [routerLink]="['/dashboard']">Acceder a la WebCam</button>
+</div>
+
 <app-mat-grid-tile 
     [cols]="'6'"
     [rowspan]="'100px'"
@@ -11,3 +15,4 @@
     (download)="download($event)"
 >
 </app-mat-grid-tile>
+
